# gabon

./: .coveragerc  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst
etc/: gabon-config-generator.conf  gooco-config-generator.conf
gabon/: __init__.py  cli.py  commands.py  config.py  contacts.py  creds.py  exception.py  interface.py  utils.py  version.py
gabon/tests/: test_gabon.py
gooco/: __init__.py  cli.py  commands.py  config.py  contacts.py  creds.py  interface.py  utils.py  version.py
gooco/tests/: test_gooco.py
