[metadata]
name = gooco
summary = Google Contacts command line organizer.
description-file =
    README.rst
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
home-page = https://github.com/alvarolopez/gooco
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    gooco

[entry_points]
oslo.config.opts =
    gooco = gooco.opts:list_opts

console_scripts =
    gooco = gooco.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gooco/locale
domain = gooco

[update_catalog]
domain = gooco
output_dir = gooco/locale
input_file = gooco/locale/gooco.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gooco/locale/gooco.pot
