[metadata]
name = gabon
summary = Google contacts organizer in ncurses.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es

home-page = https://github.com/alvarolopez/gabon
project_urls =
    Bug Tracker = https://github.com/alvarolopez/gabon/issues   

python-requires = >=3.6

license = Apache-2
license_file = LICENSE

classifier =
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Email   
    Topic :: Communications :: Email :: Address Book   

[files]
packages =
    gabon

[entry_points]
oslo.config.opts =
    gabon = gabon.opts:list_opts

console_scripts =
    gabon = gabon.cli:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gabon/locale
domain = gabon

[update_catalog]
domain = gabon
output_dir = gabon/locale
input_file = gabon/locale/gabon.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gabon/locale/gabon.pot
